(not completed!) added TextureDrawing.blockSize, added gif animations for static objects (for dynamic later), refactoring